News & Changes

SVN
===
- Options -c, -b, -e in cjknife are now deprecated. Use wildcards % and _
  for these functions instead.
- cjklib.conf needs any SQLAlchemy options to start with string 'sqlalchemy.',
  e.g. 'sqlalchemy.echo = True'. Option 'url' is the only possible exception.
- The precedence of config files changed: .cjklib.conf in '~' will now have a
  heigher weight over /etc/cjklib.conf.