@@ -4,6 +4,8 @@ SVN
 ===
 - Options -c, -b, -e in cjknife are now deprecated. Use wildcards % and _
   for these functions instead.
+- Index tables (e.g. CEDICT_Words) are deprecated and will not be generated
+  anymore.
 - cjklib.conf needs any SQLAlchemy options to start with string 'sqlalchemy.',
   e.g. 'sqlalchemy.echo = True'. Option 'url' is the only possible exception.
 - The precedence of config files changed: .cjklib.conf in '~' will now have a
